[package]
name = "kernel"
version = "0.1.0"
authors = ["Dm. Yakushev <rig410@yandex.ru>"]
edition = "2018"

[profile.release]
lto = true

[features]
default = []
bsp_rpi3 = ["arch", "arch/bsp_rpi3"]
bsp_rpi4 = ["arch", "arch/bsp_rpi4"]
test_build = ["arch/test_build"]

[dependencies]
test-types = { path = "../test-infra/test-types" }
arch = { path = "../arch/rpi", optional = true, package = "aarch_rpi" }

[dev-dependencies]
test-macros = { path = "../test-infra/test-macros" }

#[lib]
#name = "libkernel"
#test = true

[[bin]]
name = "kernel"
test = false

#[[test]]
#name = "00_console_sanity"
#harness = false
#
#[[test]]
#name = "02_exception_sync_page_fault"
#harness = false
